# 1C-ITS-parser

./: .env  data.txt  login.py  main.py  pyproject.toml  utils.py
books/: Архитектура и работа с данными.txt  Система взаимодействия. Коммуникации в бизнес приложениях.txt
parsed_data/: answer.json  books.json  program_products.json
scraper/: Бухгалтерия.json  Зарполата_и_управление_персоналом.json  Розница.json  Управление_предприятием.json  Управление_торговлей.json  Управление_холдингом.json
scraper/scraper/spiders/: accounting_spider.py  cpm_spider.py  erp_spider.py  hrm_spider.py  retail_spider.py  trade_spider.py
scripts/: crawler.py  deep_crawler.py  parser.py  pinecone.py
src/: constants.py  deep_crawler.py  deep_web_search.py  example.py  login.py  models.py  settings.py  utils.py
src/core/entities/: __init__.py  book.py  program_product.py  search.py
src/core/interfaces/: __init__.py  web_search.py
src/database/: crud.py  models.py
src/sections/: program_instructions.py
src/web_search/: __init__.py  deep_web_search.py
