[project]
name = "parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "lxml>=5.3.2",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "selenium>=4.31.0",
]
