[project]
name = "parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioscrapy>=0.2.0",
    "asgiref>=3.8.1",
    "bs4>=0.0.2",
    "crawl4ai>=0.5.0.post8",
    "html-to-markdown>=1.3.1",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "lxml[html-clean]>=5.3.2",
    "pgvector>=0.4.0",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "scrapy>=2.12.0",
    "selenium>=4.31.0",
    "unstructured>=0.17.2",
]
